# Lichen-Universe-Unified

./: CONTRIBUTING.md  LCENSE  LMEC_CEMLtest1_entropy_preference.md  MANIFESTO.md  MASTERPLAN.txt  README.md  README2.md  constantes.md  manifest.json  manifest1.json  roadmap.md
ACΦ-496/: Poc  README1.md
ASCAE/: whitepapper.md
CPU/: README.md
FC-496/: README.md  Universal Protocol_for_Interoperability.txt  fc496.py
LICHEN.STORAGE/: README.md  app.py  lichenMath.ts
LICHEN.STORAGE/components/: Visualizer.tsx
LLM/: README.md
LMEC_CEML/: CEML_LMEC_Theory_EN_FR.md  CEML_theorie_fr.md  README.md  README2.md  demo.py  requirements.txt  script.js  style.css
La_Theorie_du_Spin-Locking_Kuramoto_Pentagonal/: La_Theorie_du_Spin-Locking_Kuramoto_Pentagonal_Version_Ultra-Detaillee.md
Licehn-demo/fc496-encoder/: Input.JSON
Lichen-OS/: README.md
aether/: README.md
apps/: genesis_main.py
datacenter_energy/: LISCENSE  README.md  README_old.md  pseudocode_simulateur.md
datacenter_energy/Lichen-DataCenter-Optimizer/: README.md  les_ceml_sim_old.py
docs/: FAC.md  LMC_PoC_Fr.md
docs/UICT/: Manifesto_UICT.md
examples/: ceml_filter.py
lichen-consciousness-engine/: .gitignore  Cargo.toml  README_old.md
lichen-consciousness-engine/apps/cli/src/: main.rs
lichen-consciousness-engine/apps/web_demo/src/: main.tsx
lichen-consciousness-engine/core/ceml/src/: lib.rs
lichen-consciousness-engine/core/pi_time/src/: lib.rs
lichen-consciousness-engine/docs/whitepapers/: LCE_Whitepaper.md
pi_time/: README.md
scripts/: CEML_interactive_validator.tsx
(+5 files in other folders)
