[package]
name = "lichen-consciousness-engine"
version = "0.1.0"
edition = "2021"
description = "A fractal-based cognitive architecture for emergent consciousness"
license = "MIT"
authors = ["Bryan Ouellette <lmc.theory@gmail.com>"]

[workspace]
members = [
    "core/fc496",
    "core/ceml",
    "core/pi_time",
    "core/vdfs",
    "core/emergent_consciousness",
    "apps/cli",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
